--- a/frontend/src/app/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/forgot-password/forgot-password.component.html
@@ -1,7 +1,31 @@
-<h2>Forgot Password</h2>
-<form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
-  <label for="email">Enter your email to reset password</label>
-  <input id="email" formControlName="email" type="email" required />
-
-  <button type="submit">Reset Password</button>
-</form>
+<div class="container">
+  <h1 class="main-title">Buddy Board</h1>
+  <div class="form-box">
+    <h2 id="sorry">Sorry about that!</h2>
+    <p id="para">
+      If you have forgotten your password, please enter your email here and you
+      will receive a link to reset your password.
+    </p>
+    <p></p>
+    <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="email">Your Email</label>
+        <input
+          id="email"
+          formControlName="email"
+          type="email"
+          class="input"
+          required
+        />
+      </div>
+      <button type="submit" class="submit-button">Submit</button>
+    </form>
+    <div class="message" *ngIf="message">{{ message }}</div>
+    <div class="form-section">
+      <p>Want to try logging in? <a href="/signin">Click here</a></p>
+    </div>
+  </div>
+  <footer class="footer">
+    Footer. Study Buddies. All rights reserved. 2024
+  </footer>
+</div>
