--- a/frontend/src/app/signin/signin.component.css
+++ b/frontend/src/app/signin/signin.component.css
@@ -19,14 +19,6 @@ body {
   width: 100%;
   font-family: "Papyrus", fantasy;
 }
-#sorry {
-  text-align: center;
-}
-#para {
-  font-size: larger;
-  font-weight: bold;
-  margin-bottom: 2rem;
-}
 
 .container {
   flex: 1;
@@ -37,7 +29,6 @@ body {
   background-color: #c0c0c0;
   border: 4px solid black;
   box-sizing: border-box;
-  font-family: "Papyrus", fantasy;
 }
 
 .form-box {
@@ -110,7 +101,7 @@ body {
 .form-section {
   font-size: 0.85rem;
   margin-top: 20px;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .form-section a,
