Reset password styling Complete

--- a/frontend/src/app/signin/signin.component.html
+++ b/frontend/src/app/signin/signin.component.html
@@ -133,7 +133,7 @@
               signinForm.get('password')?.invalid &&
               signinForm.get('password')?.touched
             "
-            placeholder="Create a password"
+            placeholder="Password"n
           />
           <button
             type="button"
