--- a/frontend/src/app/signin/signin.component.css
+++ b/frontend/src/app/signin/signin.component.css
@@ -21,6 +21,8 @@ body {
 }
 
 .container {
+  width: 100vw;
+  height: 100vh;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -35,7 +37,7 @@ body {
   width: 300px;
   padding: 20px;
   background: #ffffff;
-  border: 3px solid black;
+  border: 2px solid black;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: left;
 }
