Created component for deck creation form

--- a/frontend/src/app/landing/landing.component.html
+++ b/frontend/src/app/landing/landing.component.html
@@ -1,4 +1,2 @@
-<div class="container">
-  landing page
-    
-</div>
+<button class="btn-show" (click)="toggleOverlay()"> Deck + </button>
+<app-create-deck [isModalVisible]="isModalVisible"></app-create-deck>
