--- a/frontend/src/app/landing/landing.component.css
+++ b/frontend/src/app/landing/landing.component.css
@@ -1,6 +1,6 @@
-.container{
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    color:white;
-}
+.btn-show{
+    padding:10px 15px;
+      background-color:black;
+      color:white;
+      cursor:pointer;
+    }
