--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,3 +7,10 @@ body,html{
     width:100%;
     height: 100%;
 }
+.container{
+    background-color: rgb(227, 230, 231);
+    height: 100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
