Adding Routing and favorite-deck , public-deck Components

--- a/frontend/src/app/card-details/card-details.component.html
+++ b/frontend/src/app/card-details/card-details.component.html
@@ -11,11 +11,11 @@
         <header>
             <a href="#" style="color: black;">Study Buddies</a>
             <nav>
-                <a href="#">Feed</a>
-                <a href="#">Cards</a>
-                <a href="#">Decks</a>
-                <a href="#">Logout</a>
-            </nav>
+                <a routerLink="/dashboard">Feed</a>
+                <a routerLink="/cardpage">Cards</a>
+                <a routerLink="/deckPage">Decks</a>
+                <a routerLink="/signin">Logout</a>
+              </nav>
         </header>
 
         <main>
