--- a/frontend/src/app/deck-details/deck-details.component.html
+++ b/frontend/src/app/deck-details/deck-details.component.html
@@ -2,10 +2,10 @@
   <div class="header">
     <h1>Study Buddies</h1>
     <nav>
-      <a href="#">Feed</a>
-      <a href="#">Cards</a>
-      <a href="#">Decks</a>
-      <a href="#">Logout</a>
+      <a routerLink="/dashboard">Feed</a>
+      <a routerLink="/cardpage">Cards</a>
+      <a routerLink="/deckPage">Decks</a>
+      <a routerLink="/signin">Logout</a>
     </nav>
   </div>
   <div class="popup-message" *ngIf="message">
