--- a/frontend/src/app/deck-page/deck-page.component.html
+++ b/frontend/src/app/deck-page/deck-page.component.html
@@ -2,10 +2,10 @@
     <header>
       <h1>Buddy Board</h1>
       <nav>
-        <a href="#">Feed</a>
-        <a href="#">Cards</a>
-        <a href="#">Decks</a>
-        <a href="#">Logout</a>
+        <a routerLink="/dashboard">Feed</a>
+        <a routerLink="/cardpage">Cards</a>
+        <a routerLink="/deckPage">Decks</a>
+        <a routerLink="/signin">Logout</a>
       </nav>
     </header>
     <br><br>
@@ -20,7 +20,7 @@
             <div class="decks">
               @for (item of getDisplayedPublicDecks(); track $index) {
                 <div class="deck">
-                  <a href="your-link-here" class="icon-link">
+                  <a href="your-link-here" routerLink="/deckDetails" class="icon-link">
                     <div class="icon">
                       <div class="paper back"></div>
                       <div class="paper middle"></div>
